--- a/client/src/pages/TicketsPage.css
+++ b/client/src/pages/TicketsPage.css
@@ -1,8 +1,31 @@
+input,
+select {
+  outline-width: 2px;
+  font-size: 1.2rem;
+  padding: 0.7rem;
+  border-radius: 6px;
+}
+
+input,
+label {
+  display: block;
+}
+
+label {
+  font-size: 1rem;
+  /* font-weight: bold; */
+}
+
+input:focus {
+  outline: 1px solid #0783e2;
+}
+
 .container {
   max-width: 1280px;
+  min-width: 60vw;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
   font-family: inter;
 }
 
@@ -10,18 +33,37 @@
   height: 80vh;
 }
 .footer {
-  background: #333;
   color: white;
   /* padding: 10px; */
   text-align: center;
   width: 100%;
 }
 
-.search-row {
+.filters-container {
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-end;
+  gap: 1rem;
   align-items: center;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.order-count-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-right: 0.5em;
+  margin-bottom: 0;
+}
+
+.record-count {
+  font-size: 1.4rem;
+  margin-bottom: 0;
 }
 
 .table-container {
@@ -32,7 +74,7 @@
   opacity: 1;
   overflow-y: auto;
   height: 70vh;
-  margin-top: 20px;
+  margin-top: 1px;
 }
 
 #order-table {
@@ -40,7 +82,7 @@
   table-layout: fixed;
   border-collapse: collapse;
   min-width: 400px;
-  font-size: 0.7rem;
+  font-size: 1rem;
   font-family: sans-serif;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
